# Project-1-Haughskell357

./: .gitignore  Makefile  README.md  file-organizer.cabal  gui.py  zRunTester.bat
app/: Main.hs  Tester.hs
presets/scenarios/: duplicates.json  nested.json  options.json  original-data.json
scripts/: dedupe.sh
src/Core/: Backup.hs  Dedupe.hs  Detect.hs  Duplicate.hs  Hash.hs  Organizer.hs  Scanner.hs
src/Tester/: Build.hs  Menu.hs  Presets.hs  Scramble.hs  Templates.hs  TestRegistry.hs  TestRunner.hs  TestScenarios.hs  TestTypes.hs  Types.hs
src/Tester/Tests/: DedupeTests.hs  HashTests.hs  OrganizerTests.hs  ScannerTests.hs
test/: DedupeSpec.hs  FileOrganizerSpec.hs  HashSpec.hs  RemoveOriginalsSpec.hs  RenameOrCopySpec.hs  ScannerSpec.hs  TestUtils.hs  UniqueDestSpec.hs
test-data-backup-20260413-143642/: Example.hs  readonly.txt
test-data-original/: README.md  hello_copy-1.txt  readonly.txt
test-data-original/nested/: inner_copy.txt
