cabal-version:      3.8
name:               file-organizer
version:            0.1.0.0
synopsis:           Minimal file-organizer starter
license:            MIT
author:             blank-coffee
maintainer:         josephpriego210@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  hs-source-dirs: src
  exposed-modules:
      Core.Scanner
    , Core.Detect
    , Core.Hash
    , Core.Duplicate
    , Core.Dedupe
  build-depends:
      base ^>=4.18
    , bytestring
    , cryptonite
    , directory
    , filepath
    , containers
    , memory
  default-language: Haskell2010

executable file-organizer
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base ^>=4.18
    , file-organizer
    , directory
    , filepath
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    TestUtils
    UniqueDestSpec
    RenameOrCopySpec
    RemoveOriginalsSpec
    FileOrganizerSpec
    DedupeSpec
    ScannerSpec
    HashSpec
  build-depends:
      base ^>=4.18
    , file-organizer
    , hspec
    , process
    , directory
    , filepath
    , time
  default-language: Haskell2010
