cabal-version:      3.8
name:               file-organizer
version:            0.1.0.0
synopsis:           Minimal file-organizer starter
author:             blank-coffee
maintainer:         jgriego21@unm.edu
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  hs-source-dirs: src
  exposed-modules:
      Core.Scanner
    , Core.Detect
    , Core.Hash
    , Core.Duplicate
    , Core.Dedupe
    , Core.Organizer
    , Tester.Types
    , Tester.Templates
    , Tester.Presets
    , Tester.Scramble
    , Tester.Build
    , Tester.Menu
    -- Test integration
    , Tester.TestTypes
    , Tester.TestScenarios
    , Tester.TestRegistry
    , Tester.TestRunner
    , Tester.Tests.HashTests
    , Tester.Tests.ScannerTests
    , Tester.Tests.DedupeTests
  build-depends:
      base ^>=4.18
    , bytestring
    , cryptonite
    , directory
    , filepath
    , containers
    , memory
    , aeson
    , random
    , haskeline
  default-language: Haskell2010

executable file-organizer
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base ^>=4.18
    , file-organizer
    , directory
    , filepath
  default-language: Haskell2010

executable tester
  hs-source-dirs: app
  main-is: Tester.hs
  build-depends:
      base ^>=4.18
    , file-organizer
  default-language: Haskell2010